--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,25 @@
 @import 'normalize.css/normalize';
 
-.App {
-  text-align: center;
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local(''), url('../assets/fonts/montserrat-v18-latin_cyrillic-regular.woff2') format('woff2'),
+    url('../assets/fonts/montserrat-v18-latin_cyrillic-regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: local(''), url('../assets/fonts/montserrat-v18-latin_cyrillic-700.woff2') format('woff2'),
+    url('../assets/fonts/montserrat-v18-latin_cyrillic-700.woff') format('woff');
+}
+
+#root {
+  padding-left: 1%;
+  padding-right: 1%;
+  font-family: 'Montserrat';
 }
