--- a/src/components/GameSprint/GameSprint.module.scss
+++ b/src/components/GameSprint/GameSprint.module.scss
@@ -1,3 +1,12 @@
 .title {
   color: $base-color;
 }
+
+.game {
+  text-align: center;
+  padding: 20px 40px;
+}
+
+.points {
+  text-align: center;
+}
