feat: login and registration form components

--- a/src/components/inputs/PasswordInput/PasswordInput.module.scss
+++ b/src/components/inputs/PasswordInput/PasswordInput.module.scss
@@ -1,8 +1,18 @@
 @import '~/style/variables';
+@import '~/style/mixins';
 .password{
+  &__input{
+    @include text-input;
+  }
+
+  &__label{
+    position: relative;
+    @include input-label;
+  }
 
   &__rules{
     list-style-type: none;
+    font-size: 0.7em;
   }
 
   &__rule-required{
@@ -22,14 +32,15 @@
   }
 
   &__show-btn-wrp{
-    position: relative;
+    position: absolute;
+    bottom:2px;
+    right:10px;
     cursor: pointer;
+    z-index: 2;
   }
   &__show-btn, &__hide-btn{
     display: block;
-    position: absolute;
-    top:2px;
-    right:0;
+    position: relative;
     margin-left: 20px;
     width: 30px;
     height: 20px;
