feat: add pagination to guide section, improve ui

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -4,3 +4,10 @@ $verified-color: #006400;
 $recommended-color:#B8860B;
 $wrong-color:#8B0000;
 $text-color: #3d3d3d;
+
+$color-difficulty-1: #d6ffcc;
+$color-difficulty-2: #f7ffd2;
+$color-difficulty-3: #fff9b7;
+$color-difficulty-4: #fde7c9;
+$color-difficulty-5: #faceb0;
+$color-difficulty-6: #fdb4b4;
