--- a/src/components/Guide/CardItem/CardItem.module.scss
+++ b/src/components/Guide/CardItem/CardItem.module.scss
@@ -1,36 +1,111 @@
 .card-wrapper {
-  flex-basis: 30%;
+  flex-basis: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: 5px;
-  margin: 5px;
+  margin: 25px;
+  background-color: lighten($base-color, 25%);
+  border-radius: 10px;
+  max-width: 1400px;
+  box-shadow: 0 6px 19px rgb(117 117 117 / 20%);
+  border: 1px solid #f0f0f0;
+  font-size: 19px;
+  min-height: 400px;
 }
 
 .img-wrapper {
-  
+  width: 40%;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.card-img {
-  height: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
+.card-body {
+  padding: 10px;
+  padding-top: 20px;
+  width: 55%;
+  margin-left: 20px;
+}
+
+.card-name-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.word-name {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.transcription {
+  margin-left: 15px;
+  margin-top: 3px;
+  margin-bottom: 0;
 }
 
 .btn-sound {
   background-color: transparent;
   border: none;
-  background-image: url('../assets/img/sound.svg');
-  width: 38px;
-  height: 31px;
-  transition: filter .3s;
+  background-color: #525252;
+  -webkit-mask-image: url('../assets/img/sound.svg');
+  mask-image: url('../assets/img/sound.svg');
+  -webkit-mask-size: 27px 23px;
+  mask-size: 27px 23px;
+  width: 27px;
+  height: 23px;
+  transition: opacity .3s;
+  margin-left: 15px;
+  margin-right: 10px;
+  opacity: .7;
   &:hover {
     cursor: pointer;
-    filter: sepia(50%);
+    opacity: 1;
   }
+}
+
+.translation {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #525252;
 }
 
 .examples-wrapper {
   margin-top: 10px;
+}
+
+.text-example-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 15px;
+}
+
+.text-example {
+  margin-top: 0;
+  margin-bottom: 0;
+  max-width: 630px;
+}
+
+.text-example-translation {
+  margin-top: 10px;
+  border-bottom: 1px dashed #7c7c7c;
+  padding-bottom: 20px;
+}
+
+.text-meaning-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.text-meaning {
+  margin-top: 0;
+  margin-bottom: 0;
+  max-width: 630px;
+}
+
+.text-meaning-translation {
+  margin-top: 10px;
+  margin-bottom: 0;
 }
