--- a/src/components/Guide/CardsList/CardsList.module.scss
+++ b/src/components/Guide/CardsList/CardsList.module.scss
@@ -1,5 +1,9 @@
 .cards-wrapper {
   display: flex;
   align-items: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
+  padding-left: 0;
+  margin-left: 5px;
+  margin-right: 5px;
 }
