--- a/src/components/Guide/GuideHeader/GuideHeader.module.scss
+++ b/src/components/Guide/GuideHeader/GuideHeader.module.scss
@@ -1,8 +1,8 @@
 .wrapper {
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
+  justify-content: flex-start;
+  margin-left: -6px;
 }
 
 .difficulty-wrapper {
