--- a/src/pages/GuidePage/GuidePage.module.scss
+++ b/src/pages/GuidePage/GuidePage.module.scss
@@ -1,7 +1,15 @@
 .title {
   color: $base-color;
+  margin-left: 3px;
 }
 
 body {
   overflow-y: scroll;
+}
+
+.guide-wrapper {
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
 }
