feat: add routing to guide page

--- a/src/components/Guide/CardItem/CardItem.module.scss
+++ b/src/components/Guide/CardItem/CardItem.module.scss
@@ -64,8 +64,8 @@
   background-color: transparent;
   border: none;
   background-color: #525252;
-  -webkit-mask-image: url('../assets/img/sound.svg');
-  mask-image: url('../assets/img/sound.svg');
+  -webkit-mask-image: url('/assets/img/sound.svg');
+  mask-image: url('/assets/img/sound.svg');
   -webkit-mask-size: 27px 23px;
   mask-size: 27px 23px;
   width: 27px;
