--- a/src/style/_fonts.scss
+++ b/src/style/_fonts.scss
@@ -3,8 +3,8 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local(''), url('../assets/fonts/montserrat-v18-latin_cyrillic-regular.woff2') format('woff2'),
-    url('../assets/fonts/montserrat-v18-latin_cyrillic-regular.woff') format('woff');
+  src: local(''), url('/assets/fonts/montserrat-v18-latin_cyrillic-regular.woff2') format('woff2'),
+    url('/assets/fonts/montserrat-v18-latin_cyrillic-regular.woff') format('woff');
 }
 
 @font-face {
@@ -12,6 +12,6 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: local(''), url('../assets/fonts/montserrat-v18-latin_cyrillic-700.woff2') format('woff2'),
-    url('../assets/fonts/montserrat-v18-latin_cyrillic-700.woff') format('woff');
+  src: local(''), url('/assets/fonts/montserrat-v18-latin_cyrillic-700.woff2') format('woff2'),
+    url('/assets/fonts/montserrat-v18-latin_cyrillic-700.woff') format('woff');
 }
