--- a/src/components/inputs/PasswordInput/PasswordInput.module.scss
+++ b/src/components/inputs/PasswordInput/PasswordInput.module.scss
@@ -13,6 +13,7 @@
   &__rules{
     list-style-type: none;
     font-size: 0.7em;
+    text-align: left;
   }
 
   &__rule-required{
@@ -34,7 +35,7 @@
   &__show-btn-wrp{
     position: absolute;
     bottom:2px;
-    right:10px;
+    right:20px;
     cursor: pointer;
     z-index: 2;
   }
