--- a/src/pages/StatsPage/StatsPage.module.scss
+++ b/src/pages/StatsPage/StatsPage.module.scss
@@ -1,3 +1,13 @@
 .title {
   color: $base-color;
 }
+
+.subtitle {
+  margin-top: 75px;
+}
+
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
