feat: add main page and footer

--- a/src/pages/StatsPage/StatsPage.module.scss
+++ b/src/pages/StatsPage/StatsPage.module.scss
@@ -11,7 +11,12 @@
   align-items: center;
   justify-content: center;
 }
+
 .table {
   height: 400px;
   min-width: 400px;
+}
+
+.body-wrapper {
+  min-height: 70vh;
 }
