--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -1,3 +1,117 @@
+.main-wrapper {
+  
+}
+
+.logo-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 25px;
+}
+
+.title-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .title {
-  color: $base-color;
+  text-align: center;
+  margin-top: 50px;
+  max-width: 1400px;
+  font-size: 24px;
+}
+
+.descr-wrapper {
+  margin-bottom: 80px;
+}
+
+.descr-item, .about-item {
+  box-shadow: 0 6px 19px rgb(117 117 117 / 20%);
+  border: 1px solid #f0f0f0;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  padding: 10px;
+  max-width: 1200px;
+  margin: 35px auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.about-item {
+  max-width: 700px;
+}
+
+.descr-title, .about-title {
+  text-align: center;
+}
+
+.img-wrapper {
+  max-width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.descr-body {
+  flex-basis: 60%;
+}
+
+.descr-title {
+  font-size: 26px;
+}
+
+.descr-subtitle {
+  font-size: 24px;
+}
+
+.descr-more {
+  font-size: 19px;
+}
+
+.about-wrapper {
+  margin-bottom: 50px;
+}
+
+.about-item {
+  max-width: 700px;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+.about-image {
+  max-width: 300px;
+}
+
+.about-body {
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.about-subtitle {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.about-more {
+  font-size: 19px;
+}
+
+.github-link {
+  color: inherit;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  transition: color .3s;
+  font-size: 18px;
+  &:hover {
+    color: #fab54d;
+  }
+}
+
+.github-name {
+  margin-left: 10px;
 }
