--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -5,11 +5,30 @@
 @import 'mixins';
 
 body {
-  padding-left: 1%;
-  padding-right: 1%;
-  font-family: 'Montserrat';
+  font-family: 'Montserrat' !important;
+  scrollbar-width: thin;
+  scrollbar-color: #919191 #e4e4e4;
+
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: #e4e4e4;
+    border-radius: 100px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 300px;
+    background-clip: content-box;
+    background-color: #a8a8a8;
+  }
 }
 
 .green {
   background-color: #bbff8e !important;
+}
+
+img {
+  max-width: 100%;;
 }
