--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -18,7 +18,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  transition: color .3s;
+  transition: color 0.3s;
   font-size: 16px;
   &:hover {
     color: #fab54d;
@@ -40,8 +40,19 @@
   font-size: 12px;
   color: inherit;
   text-decoration: none;
-  transition: color .3s;
+  transition: color 0.3s;
   &:hover {
     color: #fab54d;
+  }
+}
+
+.copy {
+  text-align: right;
+}
+
+@media (max-width: 1060px) {
+  .github-names {
+    margin: 0 auto;
+    flex-direction: column;
   }
 }
