--- a/src/components/GameAudio/GameAudio.module.scss
+++ b/src/components/GameAudio/GameAudio.module.scss
@@ -4,4 +4,178 @@
 
 .page {
   text-align: center;
+  background: linear-gradient(180deg, #7d5db0 0, #b06d9a 72%, #c584a4);
+  height: calc(100vh - 64px);
+  overflow-y: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.audio-btn-wrapper {
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  background-color: hsla(0, 0%, 100%, .05);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 125px;
+  margin-bottom: 125px;
+  &:hover {
+    cursor: pointer;
+    & .audio-btn {
+      opacity: 1;
+    }
+  }
+  &.small {
+    width: 60px;
+    height: 60px;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    & .audio-btn {
+      width: 39px;
+      height: 31px;
+    }
+  }
+}
+
+.audio-btn {
+  background-color: transparent;
+  border: none;
+  width: 54px;
+  height: 48px;
+  opacity: 0.5;
+  transition: opacity .3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 200px;
+  min-height: 270px;
+}
+
+.answer-btn-wrapper {
+  margin-bottom: 15px;
+}
+
+.answer-btn {
+  min-width: 135px;
+  height: 56px;
+  color: #fff;
+  margin-left: 10px;
+  margin-right: 10px;
+  transition: background .3s;
+  padding: 10px 20px;
+  padding-left: 5px;
+  font-size: 19px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
+  &:hover {
+    background: hsla(0, 0%, 100%, .12);
+    cursor: pointer;
+  }
+}
+
+.skipBtn {
+  flex-basis: 100%;
+  max-width: 200px;
+}
+
+.text {
+  color: #fff;
+  font-size: 18px;
+}
+
+.counter {
+  color: hsla(0, 0%, 100%, .25);
+  font-size: 18px;
+  margin-right: 7px;
+  margin-left: 7px;
+}
+
+.empty {
+  width: 20px;
+  height: 20px;
+}
+
+.image {
+  margin-top: 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.word-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.word-title {
+  font-size: 40px;
+  color: #fff;
+}
+
+.next-btn {
+  border: none;
+  background-color: transparent;
+  border-radius: 3px;
+  background: hsla(0, 0%, 100%, .12);
+  height: 48px;
+  width: 200px;
+  margin-top: 20px;
+  & img {
+    opacity: 0.7;
+    transition: opacity .3s, transform .3s;
+  }
+  &:hover {
+    cursor: pointer;
+    & img {
+      opacity: 1;
+      transform: translateX(5px);
+    }
+  }
+}
+
+.answers-wrapper {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  position: absolute;
+  top: 75%
+}
+
+.right-answer {
+  opacity: 1;
+}
+
+.wrong-answer {
+  opacity: 0.5;
+}
+
+.image-wrapper {
+  min-height: 260px;
+}
+
+.sound-btn-wrapper {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  &:hover {
+    cursor: pointer;
+  }
 }
