--- a/src/components/Guide/HardWordsPage/HardWordsPage.module.scss
+++ b/src/components/Guide/HardWordsPage/HardWordsPage.module.scss
@@ -12,7 +12,7 @@ body {
   max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
-  padding: 10px;
+  padding: 10px 20px;
 }
 
 .wrapper-inner {
