--- a/src/pages/GuidePage/GuidePage.module.scss
+++ b/src/pages/GuidePage/GuidePage.module.scss
@@ -11,7 +11,7 @@ body {
   max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
-  padding: 10px;
+  padding: 10px 20px;
 }
 
 .wrapper-inner {
