--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -6,6 +6,11 @@
   display: flex;
   align-items: center;
   margin-left: 150px;
+  @media screen and (max-width: 1270px) {
+    margin-left: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
 }
 
 .github-item {
@@ -34,6 +39,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  @media screen and (max-width: 1270px) {
+    flex-direction: column;
+    margin-top: 30px;
+  }
 }
 
 .notification {
@@ -48,11 +57,7 @@
 
 .copy {
   text-align: right;
-}
-
-@media (max-width: 1060px) {
-  .github-names {
-    margin: 0 auto;
-    flex-direction: column;
+  @media screen and (max-width: 1270px) {
+    text-align: center;
   }
 }
