--- a/src/components/Guide/GuideHeader/GuideHeader.module.scss
+++ b/src/components/Guide/GuideHeader/GuideHeader.module.scss
@@ -2,7 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  flex-wrap: wrap;
   margin-left: -6px;
+  @media screen and (max-width: 1150px) {
+    flex-direction: column;
+  }
 }
 
 .difficulty-wrapper {
@@ -23,4 +27,16 @@
     cursor: pointer;
     filter: contrast(90%);
   }
+}
+
+.btn-wrapper {
+  margin-left: auto;
+  @media screen and (max-width: 1160px) {
+    margin-left: 0;
+    margin-top: 10px;
+  }
+}
+
+.select-wrapper {
+  display: flex;
 }
