--- a/src/pages/GamesPage/GamesPage.module.scss
+++ b/src/pages/GamesPage/GamesPage.module.scss
@@ -14,8 +14,15 @@
   margin-bottom: 50px;
 }
 
+.subtitle {
+  font-size: 20px;
+}
+
 .wrapper-inner {
   min-height: 70vh;
+  @media screen and (max-width: 1400px) {
+    min-height: unset;
+  }
 }
 
 .games-wrapper {
@@ -24,6 +31,9 @@
   justify-content: space-between;
   max-width: 1100px;
   margin: 0 auto;
+  @media screen and (max-width: 1100px) {
+    flex-direction: column;
+  }
 }
 
 .games-item {
@@ -40,11 +50,22 @@
     transform: translateY(-3px);
     box-shadow: 0 6px 19px #f1bf72;
   }
+  @media screen and (max-width: 1400px) {
+    flex-basis: 47%;
+    margin-bottom: 35px;
+  }
+  @media screen and (max-width: 900px) {
+    width: 50%;
+  }
 }
 
 .image {
   width: 495px;
   height: 495px;
+  @media screen and (max-width: 1400px) {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .page-wrapper {
