feat: add fullscreen button to games

--- a/src/components/GameAudio/GameAudio.module.scss
+++ b/src/components/GameAudio/GameAudio.module.scss
@@ -207,3 +207,12 @@
     cursor: pointer;
   }
 }
+
+.fullscreen-wrapper {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  &:hover {
+    cursor: pointer;
+  }
+}
